force-app/main/default/objects/Strategy_Detail_History__c/Strategy_Detail_History__c.object-meta.xml
<CustomObject>
    <label>Strategy Detail History</label>
    <nameField>
        <displayFormat>SDH-{0000000}</displayFormat>
        <label>Strategy History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy Detail History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>