force-app/main/default/objects/Strategy_Detail_History__c/fields/Long_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Long_Text_Area__c</fullName>
    <label>Long Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>