force-app/main/default/objects/Strategy_Detail_History__c/fields/nd_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>