force-app/main/default/objects/Strategy_Detail_History__c/fields/nd_Field__c.field-meta.xml
<CustomField>
    <fullName>nd_Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>