force-app/main/default/objects/Strategy_Detail_History__c/fields/nd_User__c.field-meta.xml
<CustomField>
    <fullName>nd_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategy_History</relationshipName>
    <type>Lookup</type>
</CustomField>